--- a/devfront/package.json
+++ b/devfront/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "7.12.3",
     "@material-ui/core": "^4.11.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -57,6 +58,7 @@
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-measure": "^2.5.2",
+    "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
